--- a/application/assets/css/grid.css
+++ b/application/assets/css/grid.css
@@ -488,7 +488,6 @@
 .text-center {
   text-align: center;
 }
-
 .flex {
   display: -webkit-flex;
   display: flex;
@@ -524,6 +523,11 @@
   justify-content: flex-start;
 }
 
+.justify-end {
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+
 .align-start {
   -webkit-align-items: flex-start;
   align-items: flex-start;
@@ -532,6 +536,11 @@
 .align-center {
   -webkit-align-items: center;
   align-items: center;
+}
+
+.align-end {
+  -webkit-align-items: flex-end;
+  align-items: flex-end;
 }
 
 .width-100 {
