--- a/application/assets/css/main.css
+++ b/application/assets/css/main.css
@@ -117,7 +117,7 @@ article img {
 }
 
 #chat {
-  padding: 40px 10px 50px 10px;
+  padding: 40px 0px 50px 0px;
 }
 
 img[src=""] {
@@ -168,27 +168,21 @@ button:hover {
   border: 0px solid gray;
 }
 
-button:visited {
-  background: rgb(255, 255, 255);
-}
-
 .addressbook-box {
   width: 100%;
+  margin: 20vh 0 0 0;
+  padding: 0 0 60px 0;
 }
 
 #addressbook button.addressbook-item {
-  padding: 10px;
+  padding: 5px;
   border-radius: 0px;
-  min-height: 65px !important;
+  min-height: 60px !important;
   background: rgb(45, 100, 208);
   color: white;
 }
 
 #addressbook button.addressbook-item:hover {
-  background: rgba(45, 100, 208, 0.6) !important;
-}
-
-#addressbook button.addressbook-item:focus {
   background: rgba(45, 100, 208, 0.6) !important;
 }
 
@@ -838,9 +832,9 @@ article .message-map {
   left: 50%;
   margin-left: -40px;
   margin-top: -40px;
-
   z-index: 5000000000000;
 }
+
 .loading-spinner div {
   box-sizing: border-box;
   display: block;
@@ -964,40 +958,37 @@ div#message-input {
   height: 40px;
   padding: 5px;
   bottom: 35px;
-  max-width: 99vw !important;
-  min-width: 99vw !important;
   display: none;
+  margin: 0px auto;
 }
 
 div#message-input input {
   margin: 0 auto;
   border: 2px solid silver;
   border-radius: 10px;
-  width: 100%;
+  width: 30vw;
 }
 
 #start {
   padding: 10px 10px 10px 10px;
-  overflow-y: scroll !important;
 }
 
 #start p {
-  overflow-y: scroll;
+  overflow-y: scroll !important;
   max-width: 700px;
 }
 
 #start-text {
   overflow-y: scroll !important;
-  padding: 0 0 50px 0;
+  padding: 20vh 0 50px 0;
+  height: 100vh;
+}
+
+#start-text > div {
+  min-width: 100%;
 }
 #start p:focus {
   background: none;
-}
-
-#start img {
-  width: 40%;
-  margin: 60px 0 0px 0;
-  padding: 0 0 20px 0;
 }
 
 div#top-bar div.button-left:hover {
@@ -1045,17 +1036,26 @@ div#bottom-bar div.button-center:hover {
 
   #chat {
     max-width: 30vw;
+    padding-bottom: 60px;
   }
 
   #chat article {
     min-width: 100%;
     max-width: 100vw;
-    margin: 0 0 0px 0;
-    padding: 0px;
+    margin: 0 0 5px 0;
+    padding: 0px 10px 0 10px;
   }
 
   #chat article:focus {
+    background: #e2dddd;
+  }
+
+  #chat article:hover {
     background: none;
+  }
+
+  #chat:last-child {
+    padding-bottom: 80px;
   }
 
   #wrapper {
@@ -1149,8 +1149,7 @@ div#bottom-bar div.button-center:hover {
     height: 40px;
     padding: 5px;
     bottom: 75px;
-    max-width: 99vw !important;
-    min-width: 99vw !important;
+    width: 100%;
     display: none;
   }
 
@@ -1244,22 +1243,57 @@ div#bottom-bar div.button-center:hover {
     width: 100vw;
     height: 200px;
   }
+
+  div#message-input input {
+    width: 95vw;
+  }
 }
 
 @media screen and (min-width: 0px) and (max-width: 400px) {
+  div#message-input input {
+    width: 95vw;
+  }
+
   body {
     background-image: radial-gradient(circle, #e2dddd 10%, transparent 11%);
     background-size: 3px 3px;
   }
 
+  #addressbook .item:focus {
+    background: rgba(45, 100, 208, 0.6) !important;
+  }
+
   #chat article:focus {
-    background: silver !important;
+    background: rgb(226, 225, 225) !important;
   }
   #start {
     padding: 40px 10px 10px 10px;
+    overflow: hidden;
+  }
+
+  #start-text {
+    overflow-y: scroll !important;
+    padding: 0vh 0 50px 0;
+    height: 100vh;
   }
 
   #addressbook button.addressbook-item .last-conversation-meesage {
     width: 40%;
+  }
+
+  .addressbook-box {
+    width: 100%;
+    max-height: 80vh;
+    margin: 0vh 0 0 0;
+    padding: 0 0 100px 0;
+    overflow: hidden;
+  }
+
+  .addressbook-box:last-child {
+    margin: 0 0 30px 0;
+  }
+
+  #chat:last-child {
+    padding-bottom: 60px;
   }
 }
